# Mod

TD5/: CMakeLists.txt
TD5/data/: Triangulation.odt  cube1.ply  cube2.ply
TD5/shaders/: blinn.frag  blinn.vert  hole.frag  mesh.frag  simple.vert
TD5/src/: Mesh (copie).cpp  Mesh.cpp  Mesh.h  Mesh.h.autosave  Octree.cpp  Pointcloud.cpp  Pointcloud.h  Shape.h  Sphere.cpp  Sphere.h  main.cpp
mgQt/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
mgQt/SOIL/: CMakeLists.txt  Makefile  SOIL.cbp  cmake_install.cmake
mgQt/data/: plan.asc  sphere.asc
mgQt/glfw/: GLFW.cbp
mgQt/shaders/: meshColor.frag  meshColor.vert
mgQt/src/: Analysis.cpp  Analysis.h  Octree.h  Reconstruction.h  Trackball.h  common.h  main.cpp  moc_DisplayGL.cxx_parameters  moc_Windows.cxx_parameters
mgValence/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  glViewer.cbp
mgValence/SOIL/: Makefile  SOIL.cbp  cmake_install.cmake
mgValence/glfw/: GLFW.cbp
mgValence/shaders/: blinn.frag  meshColorBlinn.frag  meshColorBlinn.vert
mgValence/src/: Analysis.cpp  Analysis.h  DisplayGL.cpp  DisplayGL.h  Mesh.cpp  Mesh.h  Meshloader.h  Pointcloud.cpp  Pointcloud.h  Reconstruction.cpp  main.cpp  moc_DisplayGL.cxx_parameters  moc_Windows.cxx_parameters
